--- a/package.json
+++ b/package.json
@@ -3,13 +3,6 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "autoprefixer": "7.1.6",
-        "babel-core": "6.26.0",
-        "babel-eslint": "7.2.3",
-        "babel-jest": "20.0.3",
-        "babel-loader": "7.1.2",
-        "babel-preset-react-app": "^3.1.1",
-        "babel-runtime": "6.26.0",
         "case-sensitive-paths-webpack-plugin": "2.1.1",
         "chalk": "1.1.3",
         "css-loader": "0.28.7",
@@ -60,8 +53,18 @@
         "extends": "react-app"
     },
     "devDependencies": {
+        "autoprefixer": "7.1.6",
         "node-sass": "^4.7.2",
         "sass-loader": "^6.0.6",
-        "sass-resources-loader": "^1.3.1"
+        "sass-resources-loader": "^1.3.1",
+        "babel-plugin-transform-decorators": "^6.24.1",
+        "babel-plugin-transform-decorators-legacy": "^1.3.4",
+        "babel-core": "6.26.0",
+        "babel-eslint": "7.2.3",
+        "babel-jest": "20.0.3",
+        "babel-loader": "7.1.2",
+        "babel-preset-react-app": "^3.1.1",
+        "babel-preset-stage-2": "^6.24.1",
+        "babel-runtime": "6.26.0"
     }
 }
