--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
         "promise": "8.0.1",
         "raf": "3.4.0",
         "react": "^16.2.0",
+        "react-addons-css-transition-group": "^15.6.2",
         "react-dev-utils": "^5.0.0",
         "react-dom": "^16.2.0",
         "react-router-dom": "^4.2.2",
+        "react-transition-group": "^2.2.1",
         "style-loader": "0.19.0",
         "svg-inline-react": "^3.0.0",
         "sw-precache-webpack-plugin": "0.11.4",
@@ -54,17 +56,17 @@
     },
     "devDependencies": {
         "autoprefixer": "7.1.6",
-        "node-sass": "^4.7.2",
-        "sass-loader": "^6.0.6",
-        "sass-resources-loader": "^1.3.1",
-        "babel-plugin-transform-decorators": "^6.24.1",
-        "babel-plugin-transform-decorators-legacy": "^1.3.4",
         "babel-core": "6.26.0",
         "babel-eslint": "7.2.3",
         "babel-jest": "20.0.3",
         "babel-loader": "7.1.2",
+        "babel-plugin-transform-decorators": "^6.24.1",
+        "babel-plugin-transform-decorators-legacy": "^1.3.4",
         "babel-preset-react-app": "^3.1.1",
         "babel-preset-stage-2": "^6.24.1",
-        "babel-runtime": "6.26.0"
+        "babel-runtime": "6.26.0",
+        "node-sass": "^4.7.2",
+        "sass-loader": "^6.0.6",
+        "sass-resources-loader": "^1.3.1"
     }
 }
