--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "extract-text-webpack-plugin": "3.0.2",
         "file-loader": "1.1.5",
         "fs-extra": "3.0.1",
+        "history": "^4.7.2",
         "html-webpack-plugin": "2.29.0",
         "jest": "20.0.4",
         "normalize.css": "^7.0.0",
@@ -30,8 +31,11 @@
         "react-addons-css-transition-group": "^15.6.2",
         "react-dev-utils": "^5.0.0",
         "react-dom": "^16.2.0",
+        "react-hot-loader": "^3.1.3",
+        "react-redux": "^5.0.6",
         "react-router-dom": "^4.2.2",
         "react-transition-group": "^2.2.1",
+        "redux": "^3.7.2",
         "style-loader": "0.19.0",
         "svg-inline-react": "^3.0.0",
         "sw-precache-webpack-plugin": "0.11.4",
