--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,10 @@
 {
-    "presets": ["react","stage-2"],
-    "plugins": ["transform-decorators-legacy"]
+    "presets": [
+        "react",
+        "es2015",
+        "stage-2"
+    ],
+    "plugins": [
+        "transform-decorators-legacy"
+    ]
 }
