--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "postcss-flexbugs-fixes": "3.2.0",
         "postcss-loader": "2.0.8",
         "promise": "8.0.1",
+        "prop-types": "^15.6.0",
         "raf": "3.4.0",
         "react": "^16.2.0",
         "react-addons-css-transition-group": "^15.6.2",
