--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
     "private": true,
     "dependencies": {
         "babel-cli": "^6.26.0",
+        "babel-minify-webpack-plugin": "^0.2.0",
+        "babel-preset-babili": "^0.1.4",
+        "babel-preset-env": "^1.6.1",
         "babel-preset-es2015": "^6.24.1",
+        "babel-preset-minify": "^0.2.0",
         "case-sensitive-paths-webpack-plugin": "2.1.1",
         "chalk": "2.3.0",
         "css-loader": "0.28.9",
