--- a/.babelrc
+++ b/.babelrc
@@ -2,9 +2,11 @@
     "presets": [
         "react",
         "es2015",
+        "stage-0",
         "stage-2"
     ],
     "plugins": [
-        "transform-decorators-legacy"
+        "transform-decorators-legacy",
+        "transform-runtime"
     ]
 }
