--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "private": true,
     "dependencies": {
         "babel-cli": "^6.26.0",
+        "babel-polyfill": "^6.26.0",
         "babel-preset-es2015": "^6.24.1",
+        "babel-preset-stage-0": "^6.24.1",
         "case-sensitive-paths-webpack-plugin": "2.1.1",
         "chalk": "2.3.0",
         "css-loader": "0.28.9",
