--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "history": "^4.7.2",
         "html-webpack-plugin": "2.30.1",
         "jest": "22.1.4",
+        "lodash": "^4.17.5",
         "normalize.css": "^7.0.0",
         "npm-check-updates": "^2.14.0",
         "object-assign": "4.1.1",
