--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "workbench.iconTheme": "vscode-icons",
     "editor.renderIndentGuides": false,
     "explorer.confirmDelete": false,
+    "svn.ignoreMissingSvnWarning": true,
 
 }
 
